[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "socialsearch"
version = "0.1.0"
requires-python = ">=3.9"
description = "Multisource sentiment-focused research assistant (Reddit, Bluesky, optional Web)."
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
dependencies = [
    "openai>=1.13",
    "requests>=2.31",
    "rich>=13.7",
    "python-dotenv>=1.0"
]

[project.scripts]
socialsearch = "socialsearch_cli:main"

[tool.hatch.build]
include = [
    "README.md",
    "LICENSE",
] 